--- a/bgd-route.yaml
+++ b/bgd-route.yaml
@@ -7,7 +7,7 @@ metadata:
   name: bgd
   namespace: bgd
 spec:
-  host: ""
+  host: "bgd.apps.qa.tataunistore.com"
   port:
     targetPort: 8080
   to:
